issues fixed
- Menu links were not showing.
- header fixed
- Carousal fixed
- Menu links not showing on mobile devices

--- a/corded-core/css/default.css
+++ b/corded-core/css/default.css
@@ -1054,3 +1054,18 @@ ul.extrapages {
 		display: none;
 	}
 }
+
+
+.top-nav #menulinks li{
+	display:inline-block;
+	margin:0 10px;
+}
+#menulinks{
+	display: block;
+    text-align: center;
+    width: 100%;
+    margin: 10px 0;
+}
+.homeCarousel .slides img {
+    width: 100%;
+}
